Kolejne stadium rozwoju

--- a/App/Pages/Shared/_Layout.cshtml
+++ b/App/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <body>
     <header class="container-fluid">
             <div class="row">
-                <div class="col"><h1>Komputerowo</h1></div>
+            <a ><div class="col"><h1>Komputerowo</h1></div></a>
                 <div id="searchArea" class="col-5">
                     
                     <input type="text" id="searchText">
