--- a/App/Pages/RegisterCompleted.cshtml
+++ b/App/Pages/RegisterCompleted.cshtml
@@ -5,3 +5,9 @@
 <div class=" logOrRegForm">
     Rejestracja przebiegła pomyślnie
 </div>
+<script>
+    let redircation = "@Url.Page("/UserSettingsPanel")"
+    setTimeout(function () {
+        window.location.href = redircation; 
+    }, 5000); 
+</script>
