--- a/App/Pages/Shared/_Layout.cshtml.css
+++ b/App/Pages/Shared/_Layout.cshtml.css
@@ -46,3 +46,11 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+
+#userDropDownMenuBody {
+    display: none;
+}
+
+#userDropDownMenu:hover #userDropDownMenuBody {
+    display: block;
+}
