--- a/App/Pages/EditPersonalInformation.cshtml
+++ b/App/Pages/EditPersonalInformation.cshtml
@@ -17,5 +17,6 @@
             <input asp-for="phoneNumber" type="number" id="phoneNumberInput" class="loginInput" placeholder="" value="@Model.phoneNumber" />
             <label class="loginCaption">Imie</label><br />
         </div>
+        <input type="submit" value="Zatwierdź" class="loginButton" />
     </div>
 </form>
