--- a/App/Pages/UserSettingsPanel.cshtml
+++ b/App/Pages/UserSettingsPanel.cshtml
@@ -19,8 +19,8 @@
         <div style="text-align:center">
             <button onclick="location.href='@Url.Page("/ChangePassword")';" class="loginButton" type="button">Zmień hasło</button> <br />
             <button onclick="location.href='@Url.Page("/EditAdress")';" class="loginButton" type="button">Zmień Adres</button> <br />
-            <button class="loginButton" type="button">Zmień Dane Personalne</button> <br />
+            <button onclick="location.href='@Url.Page("/EditPersonalInformation")';" class="loginButton" type="button">Zmień Dane Personalne</button> <br />
         </div>
     </<div>
 </div>
-
+        
