--- a/App/Pages/AdminPanel/AddPowerSupply.cshtml
+++ b/App/Pages/AdminPanel/AddPowerSupply.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model App.Pages.AdminPanel.AddPowerSupplyModel
 @{
+    ViewData["Title"] = "Dodaj zasilacz";
 }
 <form method="post" id="powerSupplyForm" class="logOrRegForm" enctype="multipart/form-data">
     <div id="powerSupplyFormContent">
