--- a/App/Pages/AdminPanel/AddProcessor.cshtml
+++ b/App/Pages/AdminPanel/AddProcessor.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model App.Pages.AdminPanel.AddProcessorModel
 @{
+    ViewData["Title"] = "Dodaj procesor";
 }
 <form method="post" id="loginForm" class="logOrRegForm" enctype="multipart/form-data">
     <div id="loginFormContent">
