--- a/App/Pages/Shared/Components/AddProduct/Default.cshtml
+++ b/App/Pages/Shared/Components/AddProduct/Default.cshtml
@@ -16,14 +16,12 @@
 </div>
 
 <div class="inputUnit">
-    <textarea name="Description" class="loginInput" placeholder="" style="resize: none; width: 100%; height: 100px;">
-            </textarea>
+    <textarea name="Description" class="loginInput" placeholder="" style="resize: none; width: 100%; height: 100px;"></textarea>
     <label for="Description" class="loginCaption">Opis</label><br />
 </div>
 
 <div class="inputUnit">
-    <textarea name="AdditionalInfo" class="loginInput" placeholder="" style="resize: none; width: 100%; height: 100px;">
-            </textarea>
+    <textarea name="AdditionalInfo" class="loginInput" placeholder="" style="resize: none; width: 100%; height: 100px;"></textarea>
     <label for="AdditionalInfo" class="loginCaption">Dodatkowe informacje</label><br />
 </div>
 
