--- a/App/Pages/AdminPanel/AddCase.cshtml
+++ b/App/Pages/AdminPanel/AddCase.cshtml
@@ -28,6 +28,6 @@
             </select>
         </div>
         <input type="submit" value="zatwierdź" class="loginButton" />
-        </<div>
+        </div>
 </form>
   
