--- a/App/Pages/AdminPanel/AddRam.cshtml
+++ b/App/Pages/AdminPanel/AddRam.cshtml
@@ -34,5 +34,5 @@
             <input asp-for="Ligthing" placeholder="" />
         </div>
             <input type="submit" value="zatwierdź" class="loginButton" />
-        </<div>
+        </div>
 </form>
