--- a/App/Pages/Shared/_Layout.cshtml
+++ b/App/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/fonts/fontello-f114cee2/css/fontello.css" />
+    <link rel="stylesheet" href="~/fonts/fontello-9763c66f/css/fontello.css" />
+    <link rel="stylesheet" href="~/css/productView.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/App.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/loginAndRegister.css" asp-append-version="true" />
@@ -72,7 +73,7 @@
             </div>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3" style="margin-top: 30px;">
             @RenderBody()
         </main>
     </div>
