--- a/App/wwwroot/fonts/fontello-9763c66f/css/fontello.css
+++ b/App/wwwroot/fonts/fontello-9763c66f/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?86004033');
-  src: url('../font/fontello.eot?86004033#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?86004033') format('woff2'),
-       url('../font/fontello.woff?86004033') format('woff'),
-       url('../font/fontello.ttf?86004033') format('truetype'),
-       url('../font/fontello.svg?86004033#fontello') format('svg');
+  src: url('../font/fontello.eot?28264171');
+  src: url('../font/fontello.eot?28264171#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?28264171') format('woff2'),
+       url('../font/fontello.woff?28264171') format('woff'),
+       url('../font/fontello.ttf?28264171') format('truetype'),
+       url('../font/fontello.svg?28264171#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?86004033#fontello') format('svg');
+    src: url('../font/fontello.svg?28264171#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,7 @@
 }
 
 .icon-basket:before { content: '\e800'; } /* '' */
-.icon-facebook:before { content: '\f09a'; } /* '' */
-.icon-google:before { content: '\f1a0'; } /* '' */
+.icon-star:before { content: '\e801'; } /* '' */
+.icon-star-empty:before { content: '\e802'; } /* '' */
+.icon-star-half-alt:before { content: '\f123'; } /* '' */
 .icon-user-circle-o:before { content: '\f2be'; } /* '' */
