--- a/App/Pages/Shared/_Layout.cshtml
+++ b/App/Pages/Shared/_Layout.cshtml
@@ -80,9 +80,12 @@
 
 
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    @{
+        //<script src="~/lib/jquery/dist/jquery.min.js"></script>
+    }
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+        
     <script>
         document.getElementById("userDropDownMenu").addEventListener("mouseover", function () {
             document.getElementById("userDropDownMenuBody").style.display = "block";
@@ -92,6 +95,7 @@
             document.getElementById("userDropDownMenuBody").style.display = "none";
         });
     </script>
+                
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
